--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "license": "MIT",
   "dependencies": {
-    "solid-js": "^1.6.10"
+    "solid-js": "^1.6.10",
+    "solid-styled-components": "^0.28.5",
+    "three": "^0.149.0"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
