removed trash and renamed UploadPhoto component to InputFile

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,6 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint": "eslint --ignore-pattern test/fixture/invalid ."
+    "lint": "eslint ."
   }
 }
