work with fetch

--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,4 @@ API_BASE_URL=localhost
 API_PORT=3000
 
 VITE_PORT=3000
-VITE_API_URL=API_PROTOCOL://API_BASE_URL:API_PORT/api
+VITE_API_URL=$API_PROTOCOL://$API_BASE_URL:$API_PORT/api
