--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@solidjs/router": "^0.7.0",
-    "solid-js": "^1.6.10",
+    "solid-forms": "^0.4.8",
+    "solid-js": "^1.6.15",
     "solid-styled-components": "^0.28.5",
     "three": "^0.149.0"
   },
