--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shkarupadc.github.io/3d-scene-editing-app",
   "name": "3d-scene-editing-app",
   "version": "1.0.0",
   "description": "Application for editing objects on 3d scene resulting from training",
@@ -15,12 +16,15 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-solid": "^0.9.4",
+    "gh-pages": "^5.0.0",
     "prettier": "2.8.3",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "scripts": {
     "start": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
