routing on gh-pages fixed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shkarupadc.github.io/3d-scene-editing-app",
+  "homepage": "https://shkarupadc.github.io/3d-scene-editing-app/",
   "name": "3d-scene-editing-app",
   "version": "1.0.0",
   "description": "Application for editing objects on 3d scene resulting from training",
