--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@solidjs/router": "^0.7.0",
+    "solid-dexie": "^0.0.5",
     "solid-forms": "^0.4.8",
     "solid-js": "^1.6.15",
     "solid-styled-components": "^0.28.5",
