--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "@solidjs/router": "^0.7.0",
     "dexie": "^3.2.3",
+    "googleapis": "^114.0.0",
     "solid-forms": "^0.4.8",
     "solid-js": "^1.6.15",
     "solid-styled-components": "^0.28.5",
     "three": "^0.149.0"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "^0.4.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -29,6 +31,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "patch-package"
   }
 }
