--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "solid-forms": "^0.4.8",
     "solid-js": "^1.6.15",
     "solid-styled-components": "^0.28.5",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "three-csg": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
