--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -16,6 +16,7 @@
   },
   "rules": {
     "no-unused-vars": "warn",
-    "no-useless-escape": "off"
+    "no-useless-escape": "off",
+    "solid/reactivity": "off"
   }
 }
